--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
 
 /* The navbar container */
 topnav {
+    vertical-align: baseline;
     background-color: #333;
     width: 100%;
     padding: auto;
@@ -41,6 +42,16 @@ topnav img {
     padding: 12px 12px;
 }
 
+.nav-left-icon {
+    display: inline-block;
+    justify-content: left;
+}
+
+.nav-right-icon {
+    display: inline-block;
+    justify-content: right;
+}
+
 .nav-link {
     color: #ac9e9e;
     text-decoration: none;
@@ -62,12 +73,12 @@ topnav img {
     z-index: 1;
 
     height: 65%;
-    width: 90%;
+    width: 95%;
     top: auto;
-    left: 30px;
-    right: 30px;
+    left: 20px;
+    right: 20px;
 
-    margin: 30px;
+    margin: 20px;
     min-width: 160px;
 
     padding: 10px;
